commit pf the day

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,6 @@
 {
   "extends": "next/core-web-vitals",
   "rules": {
-    "react/jsx-key": "disabled"
+    "react/jsx-key": "error"  // or "warn" or 0 to disable
   }
 }
